<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AluguelFragment">

    <Spinner
        android:id="@+id/spAlunoAg"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="79dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spExemplarAg"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spAlunoAg" />

    <EditText
        android:id="@+id/etDataDevolucaoAg"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/dataDevolucao"
        android:inputType="text"
        android:importantForAutofill="no"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDataRetiradaAg"
        tools:textColorHint="@color/black" />

    <Button
        android:id="@+id/btnInsertAg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:text="@string/insert"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDataDevolucaoAg" />

    <Button
        android:id="@+id/btnFindOneAg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="32dp"
        android:text="@string/finOne"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spExemplarAg" />

    <EditText
        android:id="@+id/etDataRetiradaAg"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:hint="@string/dataRetirada"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spExemplarAg"
        tools:textColorHint="@color/black" />

    <Button
        android:id="@+id/btnUpdateAg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="32dp"
        android:text="@string/update"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDataDevolucaoAg" />

    <Button
        android:id="@+id/btnDeleteAg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/delete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnInsertAg" />

    <Button
        android:id="@+id/btnFindAllAg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/findAll"
        app:layout_constraintEnd_toEndOf="@+id/btnUpdateAg"
        app:layout_constraintTop_toBottomOf="@+id/btnUpdateAg" />

    <TextView
        android:id="@+id/tvFindAllAg"
        android:layout_width="412dp"
        android:layout_height="159dp"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDeleteAg" />

</androidx.constraintlayout.widget.ConstraintLayout>